Avoid a alert collapse to its input

--- a/frontend/src/pages/dashboard/first-visit-form/first-visit-form.scss
+++ b/frontend/src/pages/dashboard/first-visit-form/first-visit-form.scss
@@ -43,6 +43,7 @@
       display: flex;
       label { margin-right: 10px; }
       > div { flex: 1; }
+      .alert { margin-top: 10px; }
     }
   }
 
